force-app/main/default/objects/Training_Credential__c/Training_Credential__c.object-meta.xml
<CustomObject>
    <description>Learning Credentials that can be earned.</description>
    <label>Training Credential</label>
    <nameField>
        <label>Training Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>