force-app/main/default/objects/Training_Credential__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An Affiliation with a Program.</description>
    <inlineHelpText>An Affiliation with a Program.</inlineHelpText>
    <label>Affiliation</label>
    <referenceTo>Affiliation__c</referenceTo>
    <relationshipLabel>Training Credentials</relationshipLabel>
    <relationshipName>Training_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>