force-app/main/default/objects/Training_Credential__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A characteristic of or a credential.</description>
    <inlineHelpText>A characteristic of or a credential.</inlineHelpText>
    <label>Attribute</label>
    <referenceTo>Attribute__c</referenceTo>
    <relationshipLabel>Training Credentials</relationshipLabel>
    <relationshipName>Training_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>