force-app/main/default/objects/Training_Credential__c/fields/Course_Connection__c.field-meta.xml
<CustomField>
    <fullName>Course_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents a connection to a Course Offering.</description>
    <inlineHelpText>Represents a connection to a Course Offering.</inlineHelpText>
    <label>Course Connection</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>Training Credentials</relationshipLabel>
    <relationshipName>Training_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>