force-app/main/default/objects/Training_Credential__c/fields/Education_History__c.field-meta.xml
<CustomField>
    <fullName>Education_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A related Education History record.</description>
    <inlineHelpText>A related Education History record.</inlineHelpText>
    <label>Education History</label>
    <referenceTo>Education_History__c</referenceTo>
    <relationshipLabel>Training Credentials</relationshipLabel>
    <relationshipName>Training_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>